--- a/lib/classification_web/live/page_live.html.heex
+++ b/lib/classification_web/live/page_live.html.heex
@@ -1,15 +1,44 @@
 <div class="flex h-screen">
-  <div>Actions</div>
-  <div class="w-[32em] h-1/2 mx-auto p-4 border-2 rounded-lg shadow-xl">
-    <form id="upload-form" class="w-full" phx-change="upload">
-      <div phx-drop-target={@upload.image.ref} class="h-full">
-        <label>
-          <.live_file_input class="opacity-0 h-1/2" upload={@upload.image} />
-          <h1 class="-mt-6 text-center text-4xl">
-            Select or Drop file
-          </h1>
-        </label>
-      </div>
-    </form>
+  <div class="flex flex-col gap-2">
+    <span>Actions</span>
+    <button
+      class={"rounded-l px-5 py-2.5 text-center"
+      <> if @upload_file == nil, do: " opacity-50 border cursor-not-allowed", else: " bg-blue-500 text-white"}
+      phx-click="predict"
+      disabled={@upload_file == nil}
+    >
+      Predict
+    </button>
+    <button
+      class="rounded-lg border bg-white px-5 py-2.5 text-center text-gray-700"
+      phx-click="clear"
+    >
+      Clear
+    </button>
   </div>
+  <%= if @upload_file do %>
+    <figure>
+      <img
+        alt=""
+        class="w-full ml-4"
+        src={"data:image/png;base64,#{Base.encode64(@upload_file)}"}
+      />
+      <figcaption><%= @filename %></figcaption>
+      <p><%= "Answer: #{@ans}" %></p>
+      <p><%= "Score: #{@score}" %></p>
+    </figure>
+  <% else %>
+    <div class="w-[32em] h-1/2 mx-auto p-4 border-2 rounded-lg shadow-xl">
+      <form id="upload-form" class="h-full" phx-change="upload">
+        <div phx-drop-target={@uploads.image.ref} class="h-full">
+          <label>
+            <.live_file_input class="opacity-0 h-1/2" upload={@uploads.image} />
+            <h1 class="-mt-6 text-center text-4xl">
+              Select or Drop file
+            </h1>
+          </label>
+        </div>
+      </form>
+    </div>
+  <% end %>
 </div>
